[tool.poetry]
name = "repl_nix_modmail-logviewer-fixed"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Jinja2 = "^3.1.2"
motor = "^3.2.0"
natural = "^0.2.0"
python-dateutil = "^2.8.2"
python-dotenv = "^1.0.0"
sanic = "^23.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
